--- a/Beerkoenig/Beerkoenig.Api/Beerkoenig.Api.csproj
+++ b/Beerkoenig/Beerkoenig.Api/Beerkoenig.Api.csproj
@@ -11,6 +11,7 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.App" />
+    <PackageReference Include="Microsoft.Azure.SignalR" Version="1.0.0" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="3.0.0" />
   </ItemGroup>
 
