--- a/Beerkoenig/Beerkoenig.Services/Beerkoenig.Services.csproj
+++ b/Beerkoenig/Beerkoenig.Services/Beerkoenig.Services.csproj
@@ -5,6 +5,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.Azure.SignalR" Version="1.0.0" />
     <PackageReference Include="WebPush" Version="1.0.11" />
     <PackageReference Include="WindowsAzure.Storage" Version="9.3.2" />
   </ItemGroup>
