--- a/Beerkoenig/Beerkoenig.Spa/package.json
+++ b/Beerkoenig/Beerkoenig.Spa/package.json
@@ -25,6 +25,7 @@
     "@angular/pwa": "^0.8.4",
     "@angular/router": "^6.1.0",
     "@angular/service-worker": "^6.1.0",
+    "@aspnet/signalr": "^1.0.4",
     "core-js": "^2.5.4",
     "hammerjs": "^2.0.8",
     "rxjs": "~6.2.0",
