--- a/Beerkoenig/Beerkoenig.Spa/package.json
+++ b/Beerkoenig/Beerkoenig.Spa/package.json
@@ -28,6 +28,8 @@
     "@aspnet/signalr": "^1.0.4",
     "core-js": "^2.5.4",
     "hammerjs": "^2.0.8",
+    "ng2-file-upload": "^1.3.0",
+    "ng2-img-max": "^2.1.18",
     "rxjs": "~6.2.0",
     "zone.js": "~0.8.26"
   },
