--- a/Beerkoenig/Beerkoenig.Spa/package.json
+++ b/Beerkoenig/Beerkoenig.Spa/package.json
@@ -26,6 +26,7 @@
     "@angular/router": "^6.1.0",
     "@angular/service-worker": "^6.1.0",
     "@aspnet/signalr": "^1.0.4",
+    "classlist.js": "^1.1.20150312",
     "core-js": "^2.5.4",
     "hammerjs": "^2.0.8",
     "ng2-file-upload": "^1.3.0",
