--- a/Beerkoenig/Beerkoenig.Spa/package.json
+++ b/Beerkoenig/Beerkoenig.Spa/package.json
@@ -11,38 +11,38 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^7.0.3",
+    "@angular/animations": "^8.2.13",
     "@angular/cdk": "^7.0.3",
-    "@angular/common": "^7.0.3",
-    "@angular/compiler": "^7.0.3",
-    "@angular/core": "^7.0.3",
-    "@angular/flex-layout": "^7.0.0-beta.19",
-    "@angular/forms": "^7.0.3",
+    "@angular/common": "^8.2.13",
+    "@angular/compiler": "^8.2.13",
+    "@angular/core": "^8.2.13",
+    "@angular/flex-layout": "^8.0.0-beta.27",
+    "@angular/forms": "^8.2.13",
     "@angular/http": "^7.0.3",
     "@angular/material": "^7.0.3",
-    "@angular/platform-browser": "^7.0.3",
-    "@angular/platform-browser-dynamic": "^7.0.3",
+    "@angular/platform-browser": "^8.2.13",
+    "@angular/platform-browser-dynamic": "^8.2.13",
     "@angular/pwa": "^0.8.4",
-    "@angular/router": "^7.0.3",
-    "@angular/service-worker": "^7.0.3",
-    "@aspnet/signalr": "^1.0.4",
+    "@angular/router": "^8.2.13",
+    "@angular/service-worker": "^8.2.13",
+    "@aspnet/signalr": "^1.1.4",
     "classlist.js": "^1.1.20150312",
     "core-js": "^2.5.4",
     "hammerjs": "^2.0.8",
-    "ng2-file-upload": "^1.3.0",
+    "ng2-file-upload": "^1.4.0",
     "ng2-img-max": "^2.1.18",
-    "rxjs": "~6.3.3",
-    "zone.js": "~0.8.26"
+    "rxjs": "~6.5.3",
+    "zone.js": "~0.9.1"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.8.0",
-    "@angular/cli": "~7.0.5",
-    "@angular/compiler-cli": "^7.0.3",
-    "@angular/language-service": "^7.0.3",
+    "@angular/cli": "~8.3.17",
+    "@angular/compiler-cli": "^8.2.13",
+    "@angular/language-service": "^8.2.13",
     "@types/jasmine": "~2.8.8",
     "@types/jasminewd2": "~2.0.3",
     "@types/node": "~8.9.4",
-    "codelyzer": "~4.3.0",
+    "codelyzer": "^5.2.0",
     "jasmine-core": "~2.99.1",
     "jasmine-spec-reporter": "~4.2.1",
     "karma": "~3.0.0",
@@ -53,6 +53,6 @@
     "protractor": "~5.4.0",
     "ts-node": "~7.0.0",
     "tslint": "~5.11.0",
-    "typescript": "~3.1.6"
+    "typescript": "~3.5.3"
   }
 }
