--- a/Beerkoenig/Beerkoenig.Services/Beerkoenig.Services.csproj
+++ b/Beerkoenig/Beerkoenig.Services/Beerkoenig.Services.csproj
@@ -5,9 +5,10 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.Azure.SignalR" Version="1.0.0" />
+    <PackageReference Include="Microsoft.Azure.SignalR" Version="1.1.1" />
+    <PackageReference Include="System.Text.Json" Version="4.6.0" />
     <PackageReference Include="WebPush" Version="1.0.11" />
-    <PackageReference Include="WindowsAzure.Storage" Version="9.3.2" />
+    <PackageReference Include="WindowsAzure.Storage" Version="9.3.3" />
   </ItemGroup>
 
 </Project>
