--- a/Beerkoenig/Beerkoenig.Spa/package.json
+++ b/Beerkoenig/Beerkoenig.Spa/package.json
@@ -25,7 +25,7 @@
     "@angular/pwa": "^0.803.17",
     "@angular/router": "^8.2.13",
     "@angular/service-worker": "^8.2.13",
-    "@aspnet/signalr": "^1.1.4",
+    "@microsoft/signalr": "^3.0.0",
     "classlist.js": "^1.1.20150312",
     "core-js": "^2.5.4",
     "hammerjs": "^2.0.8",
